# pure-be

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: rand_cpdfs.rs  rand_solver_comps.rs
src/: constraint.rs  controller.rs  dfs.rs  dlx.rs  lib.rs  main.rs  middleware.rs  solve.rs  solver.rs  sudoku.rs
tests/: endpoints.rs  integration.rs  test-payload.json
