[package]
name = "pure-be"
description = "HTTP API backend for a Sudoku solver"
authors = ["17ms <hello@golfed.xyz>"]
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-governor = "0.5.0"
actix-web = "4.5.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "rand_solver_comps"
harness = false
